# cabbo

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  build.py  docker-compose.dev.yml  docker-compose.override.yml  entrypoint.sh  main.py  pyproject.toml  third-party-services.txt  trip-workflow.txt
.postman/: config.json
alembic/: env.py
alembic/versions/: 02c82e459735_db_changes_27022026.py  0517f1353c1e_rename_col_in_refund_model.py  08866df2da19_add_hop_limit.py  0c2d89a1f6f3_add_booking_id_in_trips_table.py  0f8292e8a572_db_changes_05_03.py  1625c87edfc8_db_init_08_04.py  1f428598eb8c_remove_redndant_driver_rating_cols.py  25eb18dea4e4_cabbo_dev_db.py  2985648f68f2_adjust_max_days_allowed_for_outstation_.py  2aa106540745_remove_effective_from_to_in_cancelation_.py  2d1bd7e5df0b_add_booking_id_as_idx.py  33f810b4d171_changes_on0904.py  3db86ccddd92_driver_rating_is_flagged_column_add.py  3f692369fdd8_make_trip_id_unique_in_driver_earning.py  41391082c950_change_data_type_for_created_by__in_.py  4c827be6fb71_change_data_type_refund_description.py  (+40 more)
api/v1/: routes.py
core/: cab_pricing_config.py  cabbo_logging.py  config.py  constants.py  exceptions.py  geography.py  security.py  store.py
db/: database.py
logs/: debug.log.2025-05-19  error.log.2025-05-19
models/: user.py  user_schema.py
postman/: cabbo-api.postman_collection.json
routes/: auth.py  customer.py  location.py  seed.py  trip.py  user.py
scripts/: seed.py
services/: admin_auth_service.py  audit_service.py  audit_trail_service.py  cab_service.py  customer.py  customer_service.py  driver_service.py  file_service.py  fuel_service.py  geography_service.py  google_map_service.py  location_service.py  mapbox_service.py  message_service.py  otp_service.py  passenger_service.py  payment_service.py  pricing_service.py  seed_data_service.py  serviceable_area_service.py  trip_service.py  user_service.py  validation_service.py
src/: app.py
utils/: seed_data_generation.py  utility.py
(+234 files in other folders)
